@@ -57,14 +57,6 @@
 #include <sys/stat.h>
 #include <dirent.h>
 
-/* The fts interface is incompatible with the LFS interface which
-   transparently uses the 64-bit file access functions.  */
-
-#ifdef __USE_FILE_OFFSET64
-# error "<fts.h> cannot be used with -D_FILE_OFFSET_BITS==64"
-#endif
-
-
 typedef struct {
 /*@owned@*/
 	struct _ftsent *fts_cur;	/*!< current node */
